# bayesian-autoresearcher

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  download_datasets.py  plotting.py  program.md  pyproject.toml  runner.py  scoring.py
docs/plans/: 2026-03-11-bayesian-autoresearcher-plan.md
docs/specs/: 2026-03-11-bayesian-autoresearcher-design.md
problems/ihdp/: model.py  prepare.py  problem.md  results.tsv  visualize.py
problems/lalonde/: model.py  prepare.py  problem.md  visualize.py
problems/nhefs/: model.py  prepare.py  problem.md  visualize.py
problems/twins/: model.py  prepare.py  problem.md  visualize.py
tests/: test_runner.py  test_scoring.py
